0.8.1
    - LIBWRAP_URL directive added
    - content filter for write before banner happens on all connections
    - bugfix for RBL disconnect
    - content filter supports mail jail
    - content filter no longer opens Dfile on stdin
    - content filter envoked in every delivery mode
    - content filter return value now a bitfield
    - content filter supports DISCONNECT

0.8.0.6
    - tarpit_sleep() optimized

0.8.0.5
    - bugfix: return SMTP mode to the user default mode after auth

0.8.0.4
    - bugfix: f_data connection drop after message acceptance error

0.8.0.3
    - multiple Queue Added bugfix

0.8.0.2
    - bitbucket bugfix

0.8.0.1
    - simsendmail logs message size
    - bitbucket delivery option for deliver testing
    - better Daemon logging
    - local queue runner accounting bugfix

0.8.0
    - SMTP failed rcpt punishment bugfix
    - DISCONNECT is a possible failed rcpt punishment
    - faster disk read times
    - outbound SMTP DNS has better logging and is more consice
    - better process accounting, and logging
    - better listen connection management
    - consolidate envelope reading functions, and make mismatches non-fatal
    - uninitilized variable bugfix
    - AGGRESSIVE_DELIVERY option and behavior added
    - SMTP_RCVBUF directive limits TCP Window size until valid DATA segment
    - Multiple LDAP DBs
    - updated simvacation code
    - Better Data metrics, and max message size checking
    - TARPIT individual stage timings
    - SMTP_MODE config directive
    - LDAP "bad filter" error doesn't stop expansion
    - added FAILED_RCPT_PUNISHMENT to give the TARPIT option
    - SMTP READ_BEFORE_BANNER option added
    - ignore optional Efile entry M
    - content filter can trigger tarpitting
    - f_data() cleaned up
    - SMTP DATA Time Metric
    - SMTP Data timer is for global transaction, not for a line
    - SMTP User not local error message change includes local hostname
    - Change MIN_WORK_TIME default to 300 seconds