@@ -1,6 +1,7 @@
 0.8.1
+    - content filter message propogated to SMTP client
     - LIBWRAP_URL directive added
-    - content filter for write before banner happens on all connections
+    - content filter check for write before banner happens on all connections
     - bugfix for RBL disconnect
     - content filter supports mail jail
     - content filter no longer opens Dfile on stdin
